added description about structure of project

--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@supabase/supabase-js": "^2.58.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "vitest": "^3.2.4"
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "vitest": "^3.2.4"
   }
 }
