--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node app.ts"
+    "start": "node dist/app.js"
   },
   "repository": {
     "type": "git",
